Нанесена разметка html (index&contacts)

--- a/index.html
+++ b/index.html
@@ -4,10 +4,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome Our Team</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+
+    <!-- Меню бар -->
+    <ul class="nav-bar">
+        <li class="nav-item"><a href="index.html">Home</a></li>
+        <li class="nav-item"><a href="contacts.html">Contacts</a></li>
+    </ul>
+
+    <hr>
+
+    <!-- Баннер на главной странице -->
+    <h1>New Automation Tool For You</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quia consequuntur temporibus? Deserunt
+        praesentium
+        rerum laborum excepturi iure tempora. Maxime, saepe.</p>
+    <img src="" alt="Banner picture">
+
+    <!-- Раздел продуктов -->
+    <h3>What we do to help our client to grow in digital area</h3>
+
+    <h4>Make your business to be better Famous in internet</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi consequuntur corporis
+        quasi
+        atque ea eius repellat doloremque.</p>
+
+    <h4>Bring Technology</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi consequuntur corporis
+        quasi
+        atque ea eius repellat doloremque.</p>
+
+    <h4>Builg your digital</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi consequuntur corporis
+        quasi
+        atque ea eius repellat doloremque.</p>
+
+    <!-- Раздел проектов -->
+
+    <h3>Our Finished Projects</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vitae, iure itaque ex laborum saepe eaque nemo illum
+        libero, atque, quaerat debitis accusamus vel eius.</p>
+
+    <!-- Футер -->
+
+    <h3>Interested to workwith our team?</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis quibusdam cumque, facilis explicabo soluta
+        recusandae laborum qui itaque</p>
+    <Button>Let's talk</Button>
+
+    <hr>
+
+    <ul>
+        <li>A. Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+        <li>T. +7 495 467-77-45 </li>
+        <li>welcome@ourteam.com</li>
+    </ul>
+    <p>Copyright &copy Evg S. Ivan. All rights reserved</p>
+
+
 
 </body>
 
