Добавлены классы и  CSS шрифтов и форм

--- a/contacts.html
+++ b/contacts.html
@@ -19,38 +19,38 @@
     <hr>
 
     <!-- Баннер страницы контактов -->
-    <h2>Contact Us</h2>
+    <h2 class="contacts-banner-heading">Contact Us</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit omnis non rerum harum reprehenderit voluptatum
         laborum porro earum nam labore.</p>
 
     <!-- Блок контактов -->
     <img src="" alt="Рисунок для контактов">
-    <h4>Address</h4>
+    <h4 class="contacts-item-heading">Address</h4>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, dolor?</p>
-    <h4>Phone</h4>
+    <h4 class="contacts-item-heading">Phone</h4>
     <ul>
         <li>+7 495 467-77-45</li>
         <li>+7 495 467-77-49</li>
     </ul>
-    <h4>Online Service</h4>
+    <h4 class="contacts-item-heading">Online Service</h4>
     <ul>
         <li>www.site.com</li>
         <li>welcome@ourteam.com<< /li>
     </ul>
 
     <!-- Блок обратной связи -->
-    <h4>Send Us Message</h4>
-    <form action="#">
+    <h4 class="contacts-item-heading">Send Us Message</h4>
+    <form class="send-us-form" action="#">
         Full Name
-        <input type="text" placeholder="Your Name">
+        <input class="send-us-form-items" type="text" placeholder="Your Name">
         <br>
         Email
-        <input type="email" placeholder="Your Email">
+        <input class="send-us-form-items" type="email" placeholder="Your Email">
         <br>
         Message <br>
-        <textarea name="" id="" cols="30" rows="7"></textarea>
+        <textarea class="send-us-form-items" name="" id="" cols="30" rows="7"></textarea>
         <br>
-        <button type="submit">Send</button>
+        <button class="send-us-form-btn" type="submit">Send</button>
     </form>
 
     <!-- Яндекс -карта -->
@@ -63,7 +63,7 @@
     <h3>Interested to workwith our team?</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis quibusdam cumque, facilis explicabo soluta
         recusandae laborum qui itaque</p>
-    <Button>Let's talk</Button>
+    <Button class="footer-btn">Let's talk</Button>
 
     <hr>
 
