--- a/index.html
+++ b/index.html
@@ -19,39 +19,39 @@
     <hr>
 
     <!-- Баннер на главной странице -->
-    <h1>New Automation Tool For You</h1>
+    <h1 class="index-banner-heading">New Automation Tool For You</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quia consequuntur temporibus? Deserunt
         praesentium
         rerum laborum excepturi iure tempora. Maxime, saepe.</p>
     <img src="" alt="Banner picture">
 
     <!-- Раздел продуктов -->
-    <h3>What we do to help our client to grow in digital area</h3>
+    <h3 class="services-heading">What we do to help our client to grow in digital area</h3>
 
-    <h4>Make your business to be better Famous in internet</h4>
+    <h4 class="product-heading">Make your business to be better Famous in internet</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi consequuntur corporis
         quasi
         atque ea eius repellat doloremque.</p>
 
-    <h4>Bring Technology</h4>
+    <h4 class="product-heading">Bring Technology</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi consequuntur corporis
         quasi
         atque ea eius repellat doloremque.</p>
 
-    <h4>Builg your digital</h4>
+    <h4 class="product-heading">Builg your digital</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi consequuntur corporis
         quasi
         atque ea eius repellat doloremque.</p>
 
     <!-- Раздел проектов -->
 
-    <h3>Our Finished Projects</h3>
+    <h3 class="services-heading">Our Finished Projects</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vitae, iure itaque ex laborum saepe eaque nemo illum
         libero, atque, quaerat debitis accusamus vel eius.</p>
 
     <!-- Футер -->
 
-    <h3>Interested to workwith our team?</h3>
+    <h3 class="footer-heading">Interested to workwith our team?</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis quibusdam cumque, facilis explicabo soluta
         recusandae laborum qui itaque</p>
     <Button>Let's talk</Button>
