html разбиение на блоки

--- a/contacts.html
+++ b/contacts.html
@@ -9,70 +9,91 @@
 </head>
 
 <body>
+    <div class="wrapper-index-top">
+        <div class="contacts-top">
+            <!-- Меню бар -->
+            <ul class="nav-bar">
+                <li class="nav-item"><a href="index.html">Home</a></li>
+                <li class="nav-item"><a href="contacts.html">Contacts</a></li>
+            </ul>
+            <hr>
+            <div class="contacts-banner">
+                <!-- Баннер страницы контактов -->
+                <h2 class="contacts-banner-heading">Contact Us</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit omnis non rerum harum reprehenderit
+                    voluptatum
+                    laborum porro earum nam labore.</p>
+            </div>
+        </div>
+    </div>
 
-    <!-- Меню бар -->
-    <ul class="nav-bar">
-        <li class="nav-item"><a href="index.html">Home</a></li>
-        <li class="nav-item"><a href="contacts.html">Contacts</a></li>
-    </ul>
-
-    <hr>
-
-    <!-- Баннер страницы контактов -->
-    <h2 class="contacts-banner-heading">Contact Us</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit omnis non rerum harum reprehenderit voluptatum
-        laborum porro earum nam labore.</p>
-
-    <!-- Блок контактов -->
-    <img src="" alt="Рисунок для контактов">
-    <h4 class="contacts-item-heading">Address</h4>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, dolor?</p>
-    <h4 class="contacts-item-heading">Phone</h4>
-    <ul>
-        <li>+7 495 467-77-45</li>
-        <li>+7 495 467-77-49</li>
-    </ul>
-    <h4 class="contacts-item-heading">Online Service</h4>
-    <ul>
-        <li>www.site.com</li>
-        <li>welcome@ourteam.com<< /li>
-    </ul>
-
-    <!-- Блок обратной связи -->
-    <h4 class="contacts-item-heading">Send Us Message</h4>
-    <form class="send-us-form" action="#">
-        Full Name
-        <input class="send-us-form-items" type="text" placeholder="Your Name">
-        <br>
-        Email
-        <input class="send-us-form-items" type="email" placeholder="Your Email">
-        <br>
-        Message <br>
-        <textarea class="send-us-form-items" name="" id="" cols="30" rows="7"></textarea>
-        <br>
-        <button class="send-us-form-btn" type="submit">Send</button>
-    </form>
-
+    <div class="concacts-content">
+        <div class="contacts">
+            <!-- Блок контактов -->
+            <img src="" alt="Рисунок для контактов">
+            <div class="contacts-item">
+                <h4 class="contacts-item-heading">Address</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, dolor?</p>
+            </div>
+            <div class="contacts-item">
+                <h4 class="contacts-item-heading">Phone</h4>
+                <ul>
+                    <li>+7 495 467-77-45</li>
+                    <li>+7 495 467-77-49</li>
+                </ul>
+            </div>
+            <div class="contacts-item">
+                <h4 class="contacts-item-heading">Online Service</h4>
+                <ul>
+                    <li>www.site.com</li>
+                    <li>welcome@ourteam.com<< /li>
+                </ul>
+            </div>
+        </div>
+        <div class="send-us">
+            <!-- Блок обратной связи -->
+            <h4 class="contacts-item-heading">Send Us Message</h4>
+            <form class="send-us-form" action="#">
+                Full Name
+                <input class="send-us-form-items" type="text" placeholder="Your Name">
+                <br>
+                Email
+                <input class="send-us-form-items" type="email" placeholder="Your Email">
+                <br>
+                Message <br>
+                <textarea class="send-us-form-items" name="" id="" cols="30" rows="7"></textarea>
+                <br>
+                <button class="send-us-form-btn" type="submit">Send</button>
+            </form>
+        </div>
+    </div>
     <!-- Яндекс -карта -->
-
-    <iframe src="https://yandex.ru/map-widget/v1/-/CCUMMFRkWA" width="300" height="300" frameborder="1"
-        allowfullscreen="false" style="position:relative;"></iframe>
+    <div class="find-us">
+        <iframe src="https://yandex.ru/map-widget/v1/-/CCUMMFRkWA" width="300" height="300" frameborder="1"
+            allowfullscreen="false" style="position:relative;"></iframe>
+    </div>
 
     <!-- Футер -->
-
-    <h3>Interested to workwith our team?</h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis quibusdam cumque, facilis explicabo soluta
-        recusandae laborum qui itaque</p>
-    <Button class="footer-btn">Let's talk</Button>
-
-    <hr>
-
-    <ul>
-        <li>A. Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-        <li>T. +7 495 467-77-45 </li>
-        <li>welcome@ourteam.com</li>
-    </ul>
-    <p>Copyright &copy Evg S. Ivan. All rights reserved</p>
+    <div class="footer">
+        <div class="footer-banner">
+            <div class="footer-banner-text">
+                <h3 class="footer-heading">Interested to workwith our team?</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis quibusdam cumque, facilis
+                    explicabo soluta
+                    recusandae laborum qui itaque</p>
+            </div>>
+            <Button>Let's talk</Button>
+        </div>
+        <hr>
+        <div class="footer-bottom">
+            <ul>
+                <li>A. Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+                <li>T. +7 495 467-77-45 </li>
+                <li>welcome@ourteam.com</li>
+            </ul>
+            <p class="copyright">Copyright &copy Evg S. Ivan. All rights reserved</p>
+        </div>
+    </div>
 
 </body>
 
