CSS - позиционирование элементов

--- a/index.html
+++ b/index.html
@@ -9,80 +9,87 @@
 </head>
 
 <body>
-    <div class="wrapper-top">
-        <div class="index-top">
-            <!-- Меню бар -->
+    <div class="container">
+        <div class="wrapper-top">
+            <div class="wrapper-index-top">
+                <!-- Меню бар -->
 
-            <ul class="nav-bar">
-                <li class="nav-item"><a href="index.html">Home</a></li>
-                <li class="nav-item"><a href="contacts.html">Contacts</a></li>
-            </ul>
-            <hr>
-            <div class="index-banner">
-                <!-- Баннер на главной странице -->
-                <h1 class="index-banner-heading">New Automation Tool For You</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quia consequuntur temporibus?
-                    Deserunt
-                    praesentium
-                    rerum laborum excepturi iure tempora. Maxime, saepe.</p>
-                <img src="" alt="Banner picture">
+                <ul class="nav-bar">
+                    <li class="nav-item"><a href="index.html">Home</a></li>
+                    <li class="nav-item"><a href="contacts.html">Contacts</a></li>
+                </ul>
+                <hr>
+                <div class="index-banner">
+                    <!-- Баннер на главной странице -->
+                    <h1 class="index-banner-heading">New Automation Tool For You</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quia consequuntur temporibus?
+                        Deserunt
+                        praesentium
+                        rerum laborum excepturi iure tempora. Maxime, saepe.</p>
+                    <img src="" alt="Banner picture">
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="products">
-        <!-- Раздел продуктов -->
-        <h3 class="services-heading">What we do to help our client to grow in digital area</h3>
-        <div class="products-group">
-            <div class="product-box">
-                <img src="" alt="Фото">
-                <h4 class="product-heading">Make your business to be better Famous in internet</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi consequuntur
-                    corporis quasiatque ea eiusrepellat doloremque.</p>
-            </div>
-            <div class="product-box">
-                <img src="" alt="Фото">
-                <h4 class="product-heading">Bring Technology</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi consequuntur
-                    corporis
-                    quasi
-                    atque ea eiusrepellat doloremque.</p>
-            </div>
-            <div class="product-box">
-                <img src="" alt="Фото">
-                <h4 class="product-heading">Builg your digital</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi consequuntur
-                    corporis quasi atque ea eius repellat doloremque.</p>
+        <div class="products container">
+            <!-- Раздел продуктов -->
+            <h3 class="services-heading">What we do to help our client to grow in digital area</h3>
+            <div class="products-group">
+                <div class="product-box">
+                    <img src="" alt="Фото">
+                    <h4 class="product-heading">Make your business to be better Famous in internet</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi
+                        consequuntur
+                        corporis quasiatque ea eiusrepellat doloremque.</p>
+                </div>
+                <div class="product-box">
+                    <img src="" alt="Фото">
+                    <h4 class="product-heading">Bring Technology</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi
+                        consequuntur
+                        corporis
+                        quasi
+                        atque ea eiusrepellat doloremque.</p>
+                </div>
+                <div class="product-box">
+                    <img src="" alt="Фото">
+                    <h4 class="product-heading">Builg your digital</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi
+                        consequuntur
+                        corporis quasi atque ea eius repellat doloremque.</p>
+                </div>
             </div>
         </div>
+        <!-- Раздел проектов -->
+        <div class="projects">
+            <h3 class="services-heading">Our Finished Projects</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vitae, iure itaque ex laborum saepe eaque
+                nemo
+                illum
+                libero, atque, quaerat debitis accusamus vel eius.</p>
+        </div>
     </div>
-    <!-- Раздел проектов -->
-    <div class="projects">
-        <h3 class="services-heading">Our Finished Projects</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vitae, iure itaque ex laborum saepe eaque nemo
-            illum
-            libero, atque, quaerat debitis accusamus vel eius.</p>
-    </div>
-
     <!-- Футер -->
     <div class="footer">
-        <div class="footer-banner">
-            <div class="footer-banner-text">
-                <h3 class="footer-heading">Interested to workwith our team?</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis quibusdam cumque, facilis
-                    explicabo soluta
-                    recusandae laborum qui itaque</p>
-            </div>>
-            <Button>Let's talk</Button>
-        </div>
-        <hr>
-        <div class="footer-bottom">
-            <ul>
-                <li>A. Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                <li>T. +7 495 467-77-45 </li>
-                <li>welcome@ourteam.com</li>
-            </ul>
-            <p class="copyright">Copyright &copy Evg S. Ivan. All rights reserved</p>
+        <div class="container">
+            <div class="footer-banner">
+                <div class="footer-banner-text">
+                    <h3 class="footer-heading">Interested to work with our team?</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis quibusdam cumque, facilis
+                        explicabo soluta
+                        recusandae laborum qui itaque</p>
+                </div>
+                <Button>Let's talk</Button>
+            </div>
+            <hr>
+            <div class="footer-bottom">
+                <ul class="footer-contacts">
+                    <li>A. Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+                    <li>T. +7 495 467-77-45 </li>
+                    <li>E. welcome@ourteam.com</li>
+                </ul>
+                <p class="copyright">Copyright &copy Evg S. Ivan. All rights reserved</p>
+            </div>
         </div>
     </div>
 
