Сверстана шапка index.html

--- a/contacts.html
+++ b/contacts.html
@@ -62,7 +62,7 @@
                     <input class="send-us-form-items" type="email" placeholder="Your Email">
                     <br>
                     Message <br>
-                    <textarea class="send-us-form-items" name="" id="" cols="30" rows="7"></textarea>
+                    <textarea class="send-us-form-items textarea" name="" id="" cols="30" rows="7"></textarea>
                     <br>
                     <button class="send-us-form-btn" type="submit">Send</button>
                 </form>
@@ -70,7 +70,7 @@
         </div>
         <!-- Яндекс -карта -->
         <div class="find-us">
-            <iframe src="https://yandex.ru/map-widget/v1/-/CCUMMFRkWA" frameborder="1" width="100%" height="300"
+            <iframe src="https://yandex.ru/map-widget/v1/-/CCUMMFRkWA" frameborder="0" width="100%" height="300"
                 allowfullscreen="false" style="position:relative;"></iframe>
         </div>
     </div>
