--- a/index.html
+++ b/index.html
@@ -9,65 +9,68 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="wrapper-top">
-            <div class="wrapper-index-top">
-                <!-- Меню бар -->
+    <div class="wrapper-top">
+        <div class="container top-content">
+            <!-- Меню бар -->
+            <ul class="nav-bar">
+                <li class="nav-item"><a href="index.html"><img src="img/logo.svg" alt="Логотип"></a></li>
+                <li class="nav-item"><a href="contacts.html"><img src="img/contacts.svg" alt="Контакты"></a></li>
+            </ul>
+            <!-- <hr> -->
+            <!-- <div class="index-banner"> -->
+            <!-- Баннер на главной странице -->
+            <div class="index-banner-text">
+                <h1 class="index-banner-heading">New Automation Tool For You</h1>
+                <p class="index-banner-text-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quia
+                    consequuntur temporibus?
+                    Deserunt
+                    praesentium
+                    rerum laborum excepturi iure tempora. Maxime, saepe.</p>
+                <a href="#" class="top-button">See Our Projects</a>
+            </div>
 
-                <ul class="nav-bar">
-                    <li class="nav-item"><a href="index.html">Home</a></li>
-                    <li class="nav-item"><a href="contacts.html">Contacts</a></li>
-                </ul>
-                <hr>
-                <div class="index-banner">
-                    <!-- Баннер на главной странице -->
-                    <h1 class="index-banner-heading">New Automation Tool For You</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quia consequuntur temporibus?
-                        Deserunt
-                        praesentium
-                        rerum laborum excepturi iure tempora. Maxime, saepe.</p>
-                    <img src="" alt="Banner picture">
-                </div>
+            <!-- </div> -->
+
+        </div>
+    </div>
+
+    <div class="products container">
+        <!-- Раздел продуктов -->
+        <h3 class="services-heading">What we do to help our client to grow in digital area</h3>
+        <div class="products-group">
+            <div class="product-box">
+                <img src="" alt="Фото">
+                <h4 class="product-heading">Make your business to be better Famous in internet</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi
+                    consequuntur
+                    corporis quasiatque ea eiusrepellat doloremque.</p>
+            </div>
+            <div class="product-box">
+                <img src="" alt="Фото">
+                <h4 class="product-heading">Bring Technology</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi
+                    consequuntur
+                    corporis
+                    quasi
+                    atque ea eiusrepellat doloremque.</p>
+            </div>
+            <div class="product-box">
+                <img src="" alt="Фото">
+                <h4 class="product-heading">Builg your digital</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi
+                    consequuntur
+                    corporis quasi atque ea eius repellat doloremque.</p>
             </div>
         </div>
-
-        <div class="products container">
-            <!-- Раздел продуктов -->
-            <h3 class="services-heading">What we do to help our client to grow in digital area</h3>
-            <div class="products-group">
-                <div class="product-box">
-                    <img src="" alt="Фото">
-                    <h4 class="product-heading">Make your business to be better Famous in internet</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi
-                        consequuntur
-                        corporis quasiatque ea eiusrepellat doloremque.</p>
-                </div>
-                <div class="product-box">
-                    <img src="" alt="Фото">
-                    <h4 class="product-heading">Bring Technology</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi
-                        consequuntur
-                        corporis
-                        quasi
-                        atque ea eiusrepellat doloremque.</p>
-                </div>
-                <div class="product-box">
-                    <img src="" alt="Фото">
-                    <h4 class="product-heading">Builg your digital</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi
-                        consequuntur
-                        corporis quasi atque ea eius repellat doloremque.</p>
-                </div>
-            </div>
-        </div>
-        <!-- Раздел проектов -->
-        <div class="projects">
-            <h3 class="services-heading">Our Finished Projects</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vitae, iure itaque ex laborum saepe eaque
-                nemo
-                illum
-                libero, atque, quaerat debitis accusamus vel eius.</p>
-        </div>
+    </div>
+    <!-- Раздел проектов -->
+    <div class="projects container">
+        <h3 class="services-heading">Our Finished Projects</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vitae, iure itaque ex laborum saepe eaque
+            nemo
+            illum
+            libero, atque, quaerat debitis accusamus vel eius.</p>
+    </div>
     </div>
     <!-- Футер -->
     <div class="footer">
