Верстка тела  index.html

--- a/index.html
+++ b/index.html
@@ -39,37 +39,55 @@
         <h3 class="services-heading">What we do to help our client to grow in digital area</h3>
         <div class="products-group">
             <div class="product-box">
-                <img src="" alt="Фото">
+                <img class="product-img" src="img/card1.svg" alt="Фото 1">
                 <h4 class="product-heading">Make your business to be better Famous in internet</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi
                     consequuntur
                     corporis quasiatque ea eiusrepellat doloremque.</p>
+                <a href="#" class="product-link">Learn more</a>
             </div>
             <div class="product-box">
-                <img src="" alt="Фото">
-                <h4 class="product-heading">Bring Technology</h4>
+                <img class="product-img" src="img/card2-1.svg" alt="Фото 2">
+
+                <h4 class="product-heading">Make your business to be better Famous in internet</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi
                     consequuntur
-                    corporis
-                    quasi
-                    atque ea eiusrepellat doloremque.</p>
+                    corporis quasiatque ea eiusrepellat doloremque.</p>
+                <a href="#" class="product-link">Learn more</a>
             </div>
             <div class="product-box">
-                <img src="" alt="Фото">
-                <h4 class="product-heading">Builg your digital</h4>
+                <img class="product-img" src="img/card3.svg" alt="Фото 3">
+                <h4 class="product-heading">Make your business to be better Famous in internet</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deserunt, nisi animi
                     consequuntur
-                    corporis quasi atque ea eius repellat doloremque.</p>
+                    corporis quasiatque ea eiusrepellat doloremque.</p>
+                <a href="#" class="product-link">Learn more</a>
             </div>
         </div>
     </div>
     <!-- Раздел проектов -->
     <div class="projects container">
         <h3 class="services-heading">Our Finished Projects</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vitae, iure itaque ex laborum saepe eaque
+        <p class="projects-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vitae, iure itaque ex
+            laborum saepe eaque
             nemo
             illum
             libero, atque, quaerat debitis accusamus vel eius.</p>
+        <div class="project-item">
+            <img class="project-img" src="img/project1.png" alt="Проект 1">
+            <p class="project-text">Project</p>
+        </div>
+        <div class="project-double">
+            <div class="project-item project-item-margin">
+                <img class="project-img" src="img/project2.png" alt="Проект 2">
+                <p class="project-text">Project</p>
+            </div>
+            <div class="project-item">
+                <img class="project-img" src="img/project3.png" alt="Проект 3">
+                <p class="project-text">Project</p>
+            </div>
+        </div>
+
     </div>
     </div>
     <!-- Футер -->
