верстка футера index.html

--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
             libero, atque, quaerat debitis accusamus vel eius.</p>
         <div class="project-item">
             <img class="project-img" src="img/project1.png" alt="Проект 1">
-            <p class="project-text">Project</p>
+            <p class="project-text project-text-top">Smart Home Installation</p>
         </div>
         <div class="project-double">
             <div class="project-item project-item-margin">
                 <img class="project-img" src="img/project2.png" alt="Проект 2">
-                <p class="project-text">Project</p>
+                <p class="project-text project-text-double">Sparklite App</p>
             </div>
             <div class="project-item">
                 <img class="project-img" src="img/project3.png" alt="Проект 3">
-                <p class="project-text">Project</p>
+                <p class="project-text project-text-double">Car-Rapetition App</p>
             </div>
         </div>
 
@@ -96,11 +96,12 @@
             <div class="footer-banner">
                 <div class="footer-banner-text">
                     <h3 class="footer-heading">Interested to work with our team?</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis quibusdam cumque, facilis
+                    <p class="footer-top-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis
+                        quibusdam cumque, facilis
                         explicabo soluta
                         recusandae laborum qui itaque</p>
                 </div>
-                <Button>Let's talk</Button>
+                <a href="#" class="footer-button">Let's talk</a>
             </div>
             <hr>
             <div class="footer-bottom">
