футер переделан без указания высоты

--- a/index.html
+++ b/index.html
@@ -103,16 +103,19 @@
                 </div>
                 <a href="#" class="footer-button">Let's talk</a>
             </div>
-            <hr>
+        </div>
+        <hr>
+        <div class="container">
             <div class="footer-bottom">
                 <ul class="footer-contacts">
-                    <li>A. Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                    <li>T. +7 495 467-77-45 </li>
-                    <li>E. welcome@ourteam.com</li>
+                    <li class="footer-contact">Lorem ipsum dolor sit amet consectetur, adipisicing elit </li>
+                    <li class="footer-contact">T. +7 495 467-77-45 </li>
+                    <li class="footer-contact">E. welcome@ourteam.com</li>
                 </ul>
                 <p class="copyright">Copyright &copy Evg S. Ivan. All rights reserved</p>
             </div>
         </div>
+    </div>
     </div>
 
 
