Сделана адаптация под планшет

--- a/contacts.html
+++ b/contacts.html
@@ -36,7 +36,7 @@
         <div class="contacts">
             <!-- Блок контактов -->
             <img src="img/phone.svg" alt="Рисунок для контактов">
-            <div class="contacts-item">
+            <div class="contacts-item address-item">
                 <h4 class="contacts-item-heading">Address</h4>
                 <p class="contacts-item-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, dolor?
                 </p>
@@ -78,7 +78,7 @@
 
 
     <!-- Яндекс -карта -->
-    <div class="find-us container">
+    <div class="find-us">
         <iframe src="https://yandex.ru/map-widget/v1/-/CCUMMFRkWA" frameborder="0" width="100%" height="100%"
             allowfullscreen="false" style="position:relative;"></iframe>
     </div>
